istio/destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: billing
spec:
  host: billing.default.svc.cluster.local
