istio/fault_injection_analytics_500.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: analysis-fault
spec:
  hosts:
  - analytics.default.svc.cluster.local
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 100
    route:
    - destination:
        host: analytics.default.svc.cluster.local
