istio/fault_injection_calculation.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: distributed-calculation-1
spec:
  hosts:
  - distributed-calculation-1.default.svc.cluster.local
  http:
  - fault:
      abort:
        httpStatus: 502
        percentage:
          value: 100
    route:
    - destination:
        host: distributed-calculation-1.default.svc.cluster.local
