istio/fault_injection_delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-repository
spec:
  hosts:
  - service-repository.default.svc.cluster.local
  http:
  - fault:
      delay:
        fixedDelay: 15s
        percentage:
          value: 100
    route:
    - destination:
        host: service-repository.default.svc.cluster.local
