istio/outlier_detection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: control
spec:
  host: control.default.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      baseEjectionTime: 100s
      consecutiveErrors: 3
      interval: 5s
      maxEjectionPercent: 100
