istio/retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: distributed-calculation-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: control
spec:
  hosts:
  - "*"
  gateways:
  - distributed-calculation-gateway
  http:
  - match:
    - uri:
        prefix: /calculate2
    - uri:
        prefix: /createAccount
    - uri:
        prefix: /depositAccount
    - uri:
        prefix: /chargeAccount
    - uri:
        prefix: /getAccountInfo
    - uri:
        prefix: /deleteAccount
    route:
    - destination:
        host: control.default.svc.cluster.local
        port:
          number: 8080
    retries:
      attempts: 20
      perTryTimeout: 5s
      retryOn: gateway-error
