istio/virt_svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: distributed-calculation-2
spec:
  hosts:
    - distributed-calculation-2.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: distributed-calculation-2.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: distributed-calculation-1
spec:
  hosts:
    - distributed-calculation-1.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: distributed-calculation-1.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: billing
spec:
  hosts:
    - billing.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: billing.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-repository
spec:
  hosts:
    - service-repository.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: service-repository.default.svc.cluster.local
