istio/virt_svc_10_90_canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: analytics
spec:
  hosts:
  - "*"
  gateways:
  - distributed-calculation-gateway
  http:
  - match:
    - uri:
        prefix: "/getAnalytics"
    route:
    - destination:
        host: analytics.default.svc.cluster.local
        port:
          number: 8080
      weight: 90
    - destination:
        host: analytics-advanced.default.svc.cluster.local
        port:
          number: 8080
      weight: 10
